--- a/package.json
+++ b/package.json
@@ -73,7 +73,10 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "node-sass": "^4.12.0",
+    "sass": "^1.17.2",
+    "sass-loader": "^7.1.0"
   },
   "engines": {
     "node": ">= 6.0.0",
